--- a/typing-game.html
+++ b/typing-game.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <!--<title>Art Wars</title>-->
-        <script type="text/javascript" src="game.js"></script>
-        <script type="text/javascript" src="Photon_SDK.js"></script>
-        <script type="text/javascript" src="loadBalancing.js"></script>
-        <script type="text/javascript" src="photonSettings.js"></script>
-        <script type="text/javascript" src="eventControl.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="js/game.js"></script>
+        <script type="text/javascript" src="js/Photon_SDK.js"></script>
+        <script type="text/javascript" src="js/loadBalancing.js"></script>
+        <script type="text/javascript" src="js/photonSettings.js"></script>
+        <script type="text/javascript" src="js/eventControl.js"></script>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="lobby">
